# spot-fiction

./: .gitignore  README.md  cliff.toml  pixi.toml  pyproject.toml
notebooks/: view_transcripts.ipynb
src/spot_fiction/: __init__.py  cli.py  core.py  viewer.py
